fixed background color and title alignment

--- a/frontend/src/components/AdminDataScreen/AdminDataScreen.css
+++ b/frontend/src/components/AdminDataScreen/AdminDataScreen.css
@@ -19,6 +19,7 @@
   border-radius: 15px;
   width: 150px;
   height: 40px;
+  background-color: #f0f9f1;
 }
 
 .logs{
