--- a/frontend/src/components/RecipientsCard/RecipientsCard.css
+++ b/frontend/src/components/RecipientsCard/RecipientsCard.css
@@ -29,6 +29,8 @@
   margin-top: 10px;
   margin-bottom: 20px;
   font-size: 20px;
+  display: flex;
+  justify-content: center;
 }
 
 .donors-entry-title{
